# modal-client

./: .editorconfig  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CHANGELOG_DEV.md  CHANGELOG_GO_JS.md  CLAUDE.md  DEVELOPING.md  MIGRATION-GUIDE.md  README.md  RELEASING.md  SECURITY.md  buf.yaml  conftest.py  container-requirements.ci.txt  container-requirements.txt  container_requirements.txt  node-client.js  overrides-3.9.txt  pyproject.toml  remote_bench.py  requirements.dev.txt  requirements.txt  ruff.toml  self_async.py  setup.cfg  setup.py  tasks.py  test.py  test_lsof_code_path.py  test_server_deploy.py
alias-package/: setup.cfg
crates/modal/: Cargo.toml  build.rs
crates/modal/examples/: hello.rs
crates/modal/src/: arguments.rs  auth.rs  client.rs  config.rs  error.rs  function.rs  lib.rs  payload_value_impls.rs  schema.rs  value.rs
go/: .gitignore  .golangci.toml  AGENTS.md  BUILD.bazel  README.md  app.go  app_test.go  auth_token_manager.go  auth_token_manager_test.go  blob.go  blob_retry_test.go  client.go  client_test.go  cloud_bucket_mount.go  cloud_bucket_mount_test.go  cls.go  cls_test.go  compile-proto.sh  config.go  config_test.go  doc.go  environment.go  environment_test.go  ephemeral.go  errors.go  function.go  function_call.go  function_test.go  go.mod  go.sum  image.go  invocation.go  logger.go  logger_test.go  main.go  main_test.go  name_utils.go  proxy.go  public_api_test.go  queue.go  (+18 more)
go/examples/cls-call/: BUILD.bazel  main.go
go/examples/cls-call-with-options/: BUILD.bazel  main.go
go/examples/cls-routing-region/: main.go
go/examples/custom-client/: BUILD.bazel  main.go
go/examples/function-call/: BUILD.bazel  main.go
go/examples/function-current-stats/: BUILD.bazel  main.go
go/examples/function-spawn/: BUILD.bazel  main.go
go/examples/hello/: main.go
go/examples/image-building/: BUILD.bazel  main.go
go/examples/sandbox/: BUILD.bazel  main.go
go/examples/sandbox-agent/: BUILD.bazel  main.go
go/examples/sandbox-cloud-bucket/: BUILD.bazel  main.go
go/examples/sandbox-connect-token/: BUILD.bazel  main.go
go/examples/sandbox-directory-snapshot/: BUILD.bazel  main.go
go/examples/sandbox-directory-snapshot-csek/: main.go
go/examples/sandbox-exec/: BUILD.bazel  main.go
go/examples/sandbox-filesystem/: BUILD.bazel  main.go
go/examples/sandbox-filesystem-snapshot/: BUILD.bazel  main.go
go/examples/sandbox-fs/: main.go
go/examples/sandbox-gpu/: BUILD.bazel  main.go
go/examples/sandbox-named/: BUILD.bazel  main.go
go/examples/sandbox-network-policy/: main.go
go/examples/sandbox-poll/: BUILD.bazel  main.go
go/examples/sandbox-prewarm/: BUILD.bazel  main.go
go/examples/sandbox-private-image/: BUILD.bazel  main.go
go/examples/sandbox-proxy/: BUILD.bazel  main.go
go/examples/sandbox-secrets/: BUILD.bazel  main.go
go/examples/sandbox-sidecar/: main.go
go/examples/sandbox-tunnels/: BUILD.bazel  main.go
go/examples/sandbox-volume/: BUILD.bazel  main.go
go/examples/sandbox-volume-ephemeral/: BUILD.bazel  main.go
go/examples/telemetry/: BUILD.bazel  main.go
go/internal/grpcmock/: BUILD.bazel  mock.go
go/modal_docs/: gen_reference_docs.go  gen_reference_docs_test.go  intro.md
go/pkg/modal/: api.pb.go  api.proto  api_grpc.pb.go  arguments.go  auth.go  client.go  config.go  function.go  options.pb.go  value.go
go/proto/modal_proto/: BUILD.bazel  api.pb.go  (+3 more)
go/scripts/: gen-proto.sh  proto_toolchain.sh
go/test/: BUILD.bazel  auth_token_manager_test.go  cls_test.go  cls_with_options_test.go  function_call_test.go  function_test.go  grpc_test.go  image_test.go  integration_test.go  proxy_test.go  queue_test.go  retries_test.go  sandbox_directory_snapshot_test.go  sandbox_exec_helpers_test.go  sandbox_filesystem_snapshot_test.go  sandbox_filesystem_test.go  sandbox_sidecar_test.go  sandbox_test.go  secret_test.go  testutils_test.go  volume_test.go
modal_proto/: .gitignore  BUILD.bazel  api.proto  api_grpc.py  api_pb2.py  api_pb2_grpc.py  blobs.proto  input_plane.proto  modal_api_grpc.py  options.proto  options_grpc.py  options_pb2.py  sandbox_router.proto  task_command_router.proto
py/: .gitignore  BUILD.bazel  CHANGELOG.md  CHANGELOG_DEV.md  README.md  clobber_put_visibility_instrumentation_design.md  compile_protos.py  conftest.py  pyproject.toml  requirements.dev.txt  requirements.protos.txt  tasks.py  volume_put_get_path_alignment_design.md
py/modal/: BUILD.bazel  __init__.py  _billing.py  _clustered_functions.py  _container_entrypoint.py  _environments.py  _function_variants.py  _functions.py  _grpc_client.py  _image.py  _load_context.py  _logs.py  _logs_manager.py  _object.py  _partial_function.py  _resolver.py  _resources.py  _serialization.py  _server.py  _supports_logs.py  _traceback.py  _tunnel.py  _watcher.py  _workspace.py  app.py  billing.py  call_graph.py  client.py  cloud_bucket_mount.py  cls.py  config.py  container_process.py  dict.py  environments.py  exception.py  file_io.py  file_pattern_matcher.py  functions.py  gpu.py  image.py  (+22 more)
py/modal_docs/: BUILD.bazel  gen_cli_docs.py  gen_cli_docs_main.py  gen_reference_docs.py  gen_reference_docs_main.py  reference_intro.md
py/modal_proto/: __init__.py
py/modal_version/: BUILD.bazel  __init__.py
py/protoc_plugin/: BUILD.bazel  plugin.py
py/test/: BUILD.bazel  aio_test.py  app_test.py  asgi_wrapper_test.py  async_utils_test.py  auth_token_manager_test.py  billing_test.py  blob_test.py  bootstrap_test.py  changelog_test.py  cli_imports_test.py  cli_selector_test.py  cli_shell_test.py  cli_test.py  client_test.py  cls_test.py  config_test.py  conftest.py  container_app_test.py  container_test.py  container_test_helpers.py  dict_test.py  docker_utils_test.py  environment_test.py  error_test.py  experimental_test.py  file_io_test.py  file_pattern_matcher_test.py  flash_test.py  fork_test.py  function_retry_test.py  function_test.py  function_utils_test.py  gpu_fallbacks_test.py  gpu_test.py  grpc_utils_test.py  helpers.py  i6pn_clustered_test.py  image_test.py  input_plane_test.py  (+39 more)
(+938 files in other folders)
