[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
exclude = "build"
ignore_missing_imports = true
check_untyped_defs = true
no_strict_optional = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "modal/_vendor/cloudpickle",
    "modal/_vendor/tblib",
    "modal/_vendor/a2wsgi_wsgi",
]
ignore_errors = true

[tool.pytest.ini_options]
timeout = 300
addopts = "--ignore=modal/cli/programs"
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:Type google._upb.*MapContainer uses PyType_Spec.*Python 3.14:DeprecationWarning",
    "error::modal.exception.DeprecationError",
    "ignore::DeprecationWarning:pytest.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
    "ignore::DeprecationWarning:google.rpc.*:",
    "ignore:.*pkg_resources.*:DeprecationWarning::",
]

[tool.ruff]
extend-include = ["*.pyi"]
exclude = [
    '.venv',
    '.git',
    '__pycache__',
    'proto',
    'build',
    'modal_proto',
    'modal/_vendor',
]
line-length = 120
lint.ignore = ['E741']
lint.select = ['E', 'F', 'W', 'I']

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ['E712']
"test/supports/notebooks/*.py" = ['E402']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "modal",
    "modal_global_objects",
    "modal_proto",
    "modal_version",
]
extra-standard-library = ["pytest"]

[tool.pyright]
reportUnnecessaryComparison = true
