[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiohttp
    aiostream
    asgiref
    certifi
    cloudpickle>=2.0.0,<2.1.0
    fastapi
    grpclib==0.4.3
    importlib_metadata
    protobuf==4.21.5
    rich
    sentry-sdk
    synchronicity>=0.2.8
    toml
    typer
    types-certifi
    types-toml
    watchfiles

[options.entry_points]
console_scripts =
    modal = modal.cli:main

[options.package_data]
modal =
    requirements.txt
