[metadata]
name = modal
author = Modal Labs
author_email = support@modal.com
description = Python client library for Modal
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Homepage = https://modal.com
keywords = modal, client, cloud, serverless, infrastructure
classifiers =
    Topic :: System :: Distributed Computing
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp
    aiostream
    asgiref
    certifi
    # These are pinned to be protocol-compatible with the version of
    # cloudpickle inside the container (defined in requirements.txt).
    cloudpickle>=2.0.0,<2.1.0;python_version<'3.11'
    cloudpickle>=2.2.0,<2.3.0;python_version>='3.11'
    click>=8.1.0
    fastapi
    grpclib==0.4.7
    importlib_metadata>=3.6.0
    protobuf>=3.19,<5.0,!=4.24.0
    rich>=12.0.0
    synchronicity~=0.6.2
    tblib>=1.7.0
    toml
    typer~=0.9.0
    types-certifi
    types-toml
    watchfiles
    typing_extensions~=4.6

[options.entry_points]
console_scripts =
    modal = modal.__main__:main

[options.package_data]
modal =
    requirements*.txt
    py.typed
    *.pyi
modal_proto =
    *.proto
