[metadata]
name = modal
author = Modal Labs
author_email = support@modal.com
description = Python client library for Modal
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Homepage = https://modal.com
    Source = https://github.com/modal-labs/modal-client
keywords = modal, client, cloud, serverless, infrastructure
classifiers =
    Topic :: System :: Distributed Computing
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp
    aiostream~=0.5.2
    certifi
    click>=8.1.0
    fastapi
    grpclib==0.4.7
    protobuf>=3.19,<6.0,!=4.24.0
    rich>=12.0.0
    synchronicity~=0.9.3
    toml
    typer>=0.9
    types-certifi
    types-toml
    watchfiles
    typing_extensions~=4.6

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    modal = modal.__main__:main

[options.package_data]
modal =
    requirements/*.md
    requirements/*.txt
    requirements/*.json
    py.typed
    *.pyi
modal_proto =
    *.proto
    py.typed
    *.pyi
