[metadata]
name = modal
author = Modal Labs
author_email = erik@modal.com
description = Dummy alias that requires modal-client
long_description = This package is a dummy package that just requires the modal-client package.
project_urls =
    Homepage = https://modal.com

[options]
install_requires =
    modal-client
