"""Build configuration for client proto files"""

load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("//bazel:python.bzl", "py_proto_gen_library")

# Export all proto files as a filegroup to preserve directory structure
filegroup(
    name = "proto_files",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
)

# Also export individual files for selective use
exports_files(glob(["*.proto"]))

# proto_library for the main client API proto.
# strip_import_prefix = "/client" makes the file importable as "modal_proto/api.proto"
# which matches the import statements in the server proto files.
proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    strip_import_prefix = "/client",
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:any_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:struct_proto",
        "@protobuf//:timestamp_proto",
        "@protobuf//:wrappers_proto",
    ],
)

# Generated Python proto bindings for client protos.
# Generates pb2, grpcio, grpclib, and mypy stub files from api.proto and
# task_command_router.proto, plus the custom modal_api_grpc.py wrapper via
# the Modal protoc plugin.
py_proto_gen_library(
    name = "modal_proto",
    custom_plugins = [
        {
            "name": "modal-grpclib-python",
            "script": "//client/py/protoc_plugin:plugin.py",
            "outs": ["modal_api_grpc.py"],
        },
    ],
    imports = [".."],
    proto_includes = ["client"],
    proto_path_prefix = "modal_proto",
    proto_srcs = [
        "api.proto",
        "task_command_router.proto",
    ],
    static_srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pip//grpcio",
        "@pip//grpclib",
        "@pip//protobuf",
    ],
)
