[build-system]
requires = ["setuptools~=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modal"
description = "Python client library for Modal"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10,<3.15"
license = "Apache-2.0"

authors = [
    { name = "Modal Labs", email = "support@modal.com" }
]
dependencies = [
    "aiohttp",
    "cbor2",
    "certifi",
    "click~=8.1",
    "grpclib>=0.4.7,<0.4.10 ; python_version < '3.14'",
    "grpclib>=0.4.9,<0.4.10 ; python_version >= '3.14'",
    "protobuf>=3.19,<7.0,!=4.24.0",
    "rich>=12.0.0",
    "synchronicity~=0.12.1",
    "toml",
    "types-certifi",
    "types-toml",
    "watchfiles",
    "typing_extensions~=4.6",
]
keywords = ["modal", "client", "cloud", "serverless", "infrastructure"]
classifiers = [
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

[dependency-groups]
dev = [
    "fastapi~=0.125",
    "flaky~=3.8",
    "grpclib==0.4.9",
    "invoke~=2.2",
    "httpx~=0.27.2",
    "pyjwt~=2.10.1",
    "pre-commit>=2.21,<4",
    "mypy~=1.18.2",
    "packaging>=23.1",
    "pytest~=8.4.0",
    "pytest-asyncio~=1.3.0",
    "pytest-env~=1.1.5",
    "pytest-markdown-docs==0.9.2",
    "pytest-timeout~=2.4.0",
    "python-dotenv~=1.0.0",
    "requests~=2.32.4",
    "ruff~=0.9.6",
    "setuptools<82", # Required by grpcio-tools for pkg_resources (v82+ removed pkg_resources)"
    "types-croniter~=1.0.8",
    "types-python-dateutil~=2.8.10",
    "types-requests~=2.31.0",
    "types-setuptools~=57.4.11",
    "types-six~=1.16.21",
    "types-toml~=0.10.4",
    "wheel~=0.38.1",
    "nbclient~=0.10.2",
    "notebook~=7.5.4",
    "jupytext~=1.19.1",
    "pyright~=1.1.351",
    "console-ctrl~=0.1.0",
    "zstandard~=0.25.0",
    "synchronicity[compile]~=0.12.1",
    "python-json-logger==2.0.7",
    "build~=1.3.0",
    # ddtrace 2.18.1 only ships wheels for Python <=3.12 and its sdist won't
    # build on 3.13+ (Cython sources reference removed CPython API symbols).
    # internal_common pins 2.18.1, so we match for compatible Pythons; on
    # 3.13+ ddtrace is simply not a client dev dep until a coordinated bump.
    "ddtrace==2.18.1; python_version<'3.13'",

    "mypy-protobuf",
    "grpcio-tools",
    # Additional test-only dependencies (used by the Bazel client test
    # matrix and previously sourced from the workspace dev group).
    # ``nbformat`` and ``psutil`` are imported directly by ``notebook_test``
    # and ``blob_test``; ``ipykernel`` is required by ``nbclient`` for
    # notebook execution; ``pytest-benchmark`` and ``nest-asyncio`` are
    # auto-loaded by pytest entry points.  ``pytest-freezegun`` is
    # intentionally omitted — it imports ``distutils.version.LooseVersion``
    # which was removed in Python 3.12.
    "ipykernel~=6.30",
    "nbformat~=5.10",
    "nest-asyncio~=1.5",
    "psutil~=6.0",
    "pytest-benchmark~=5.1",
]

[tool.uv.extra-build-dependencies]
grpcio-tools = ["setuptools<82"]

[project.urls]
Homepage = "https://modal.com"
Source = "https://github.com/modal-labs/modal-client"
Documentation = "https://modal.com/docs"
"Issue Tracker" = "https://github.com/modal-labs/modal-client/issues"

[project.scripts]
modal = "modal.__main__:main"

[tool.setuptools.packages.find]
include = ["modal", "modal.*", "modal_docs", "modal_docs.*", "modal_version", "modal_proto"]
exclude = ["test*", "modal_global_objects"]

[tool.setuptools.package-data]
modal = ["builder/*.md", "builder/*.txt", "builder/*.json", "py.typed", "*.pyi"]
modal_proto = ["*.proto", "py.typed", "*.pyi"]

[tool.setuptools.dynamic]
version = {attr = "modal_version.__version__"}

[tool.mypy]
python_version = "3.11"
exclude = "build"
ignore_missing_imports = true
check_untyped_defs = true
no_strict_optional = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "modal/_vendor/cloudpickle",
    "modal/_vendor/tblib",
    "modal/_vendor/a2wsgi_wsgi",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
timeout = 300
addopts = "--ignore=modal/cli/programs"
filterwarnings = [
    "error::DeprecationWarning",
    "ignore:Type google._upb.*MapContainer uses PyType_Spec.*Python 3.14:DeprecationWarning",
    "error::modal.exception.DeprecationError",
    "error::modal.exception.AsyncUsageWarning",
    "ignore:distutils Version classes are deprecated:DeprecationWarning",  # pytest-freezegun internals
]

[tool.ruff]
extend-include = ["*.pyi"]
exclude = [
    '.venv',
    '.git',
    '__pycache__',
    'proto',
    'build',
    'modal_proto',
    'modal/_vendor',
]
line-length = 120

[tool.ruff.lint]
ignore = ['E741', 'F841']
select = [
    'E',
    'F',
    'W',
    'I',
    'RUF006', # asyncio-dangling-task
    'T10',  # flake8-debugger
    'T20',  # flake8-print
]
preview = true
explicit-preview-rules = true
extend-select = ['PLR1702']

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ['E712', 'T201']
"test/**" = ['T201']
"test/supports/notebooks/*.py" = ['E402']
"modal/cli/programs/*" = ['T201']
"modal_docs/**" = ['T201']
"modal_global_objects/**" = ['T201']
"tasks.py" = ['T201']
"compile_protos.py" = ['T201']
"modal/__init__.py" = ['T201']
"modal/experimental/ipython.py" = ['T201']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "modal",
    "modal_global_objects",
    "modal_proto",
    "modal_version",
]
extra-standard-library = ["pytest"]

[tool.ruff.lint.pylint]
max-nested-blocks = 7

[tool.pyright]
reportUnnecessaryComparison = true
venvPath = ".venv/"
