[package]
name = "modal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
prost = "0.13.3"
serde = { version = "1.0.210", features = ["serde_derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.19"
tonic = { version = "0.12.3", features = ["tls", "tls-roots"] }

[build-dependencies]
anyhow = "1.0.89"
tonic-build = "0.12.3"
