"""Build configuration for the modal client library."""

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "modal",
    srcs = [
        "__init__.py",
        "__main__.py",
        "_billing.py",
        "_clustered_functions.py",
        "_container_entrypoint.py",
        "_functions.py",
        "_grpc_client.py",
        "_ipython.py",
        "_load_context.py",
        "_location.py",
        "_object.py",
        "_output/__init__.py",
        "_output/manager.py",
        "_output/pty.py",
        "_output/rich.py",
        "_output/status.py",
        "_partial_function.py",
        "_resolver.py",
        "_resources.py",
        "_runtime/__init__.py",
        "_runtime/asgi.py",
        "_runtime/container_io_manager.py",
        "_runtime/execution_context.py",
        "_runtime/gpu_memory_snapshot.py",
        "_runtime/telemetry.py",
        "_runtime/user_code_event_loop.py",
        "_runtime/user_code_imports.py",
        "_serialization.py",
        "_server.py",
        "_traceback.py",
        "_tunnel.py",
        "_type_manager.py",
        "_utils/__init__.py",
        "_utils/app_utils.py",
        "_utils/async_utils.py",
        "_utils/auth_token_manager.py",
        "_utils/blob_utils.py",
        "_utils/browser_utils.py",
        "_utils/bytes_io_segment_payload.py",
        "_utils/deprecation.py",
        "_utils/docker_utils.py",
        "_utils/function_utils.py",
        "_utils/git_utils.py",
        "_utils/grpc_testing.py",
        "_utils/grpc_utils.py",
        "_utils/hash_utils.py",
        "_utils/http_utils.py",
        "_utils/jwt_utils.py",
        "_utils/logger.py",
        "_utils/mount_utils.py",
        "_utils/name_utils.py",
        "_utils/package_utils.py",
        "_utils/pattern_utils.py",
        "_utils/rand_pb_testing.py",
        "_utils/sandbox_fs_utils.py",
        "_utils/shell_utils.py",
        "_utils/task_command_router_client.py",
        "_utils/time_utils.py",
        "_vendor/__init__.py",
        "_vendor/a2wsgi_wsgi.py",
        "_vendor/cloudpickle.py",
        "_vendor/tblib.py",
        "_vendor/version.py",
        "_watcher.py",
        "app.py",
        "billing.py",
        "call_graph.py",
        "cli/__init__.py",
        "cli/_download.py",
        "cli/_traceback.py",
        "cli/app.py",
        "cli/billing.py",
        "cli/changelog.py",
        "cli/cluster.py",
        "cli/config.py",
        "cli/container.py",
        "cli/dashboard.py",
        "cli/dict.py",
        "cli/entry_point.py",
        "cli/environment.py",
        "cli/import_refs.py",
        "cli/launch.py",
        "cli/network_file_system.py",
        "cli/profile.py",
        "cli/programs/__init__.py",
        "cli/programs/run_jupyter.py",
        "cli/programs/vscode.py",
        "cli/queues.py",
        "cli/run.py",
        "cli/secret.py",
        "cli/selector.py",
        "cli/shell.py",
        "cli/token.py",
        "cli/utils.py",
        "cli/volume.py",
        "client.py",
        "cloud_bucket_mount.py",
        "cls.py",
        "config.py",
        "container_process.py",
        "dict.py",
        "environments.py",
        "exception.py",
        "experimental/__init__.py",
        "experimental/flash.py",
        "experimental/ipython.py",
        "file_io.py",
        "file_pattern_matcher.py",
        "functions.py",
        "gpu.py",
        "image.py",
        "io_streams.py",
        "mount.py",
        "network_file_system.py",
        "object.py",
        "output.py",
        "parallel_map.py",
        "partial_function.py",
        "proxy.py",
        "queue.py",
        "retries.py",
        "runner.py",
        "running_app.py",
        "sandbox.py",
        "sandbox_fs.py",
        "schedule.py",
        "scheduler_placement.py",
        "secret.py",
        "server.py",
        "serving.py",
        "snapshot.py",
        "stream_type.py",
        "token_flow.py",
        "volume.py",
    ],
    data = [
        "py.typed",
    ] + glob([
        "builder/*.md",
        "builder/*.txt",
        "builder/*.json",
    ]),
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//client/modal_proto",
        "//client/py/modal_version",
        "@pip//aiohttp",
        "@pip//cbor2",
        "@pip//certifi",
        "@pip//click",
        "@pip//grpclib",
        "@pip//protobuf",
        "@pip//rich",
        "@pip//synchronicity",
        "@pip//toml",
        "@pip//typer",
        "@pip//types_certifi",
        "@pip//types_toml",
        "@pip//typing_extensions",
        "@pip//watchfiles",
    ],
)
