"""Build configuration for the modal client library."""

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "modal",
    srcs = glob(["**/*.py"]),
    data = [
        "py.typed",
    ] + glob([
        "builder/*.md",
        "builder/*.txt",
        "builder/*.json",
    ]),
    imports = [".."],
    visibility = ["//visibility:public"],
    deps = [
        "//client/modal_proto",
        "//client/py/modal_version",
        "@pip//aiohttp",
        "@pip//cbor2",
        "@pip//certifi",
        "@pip//click",
        "@pip//grpclib",
        "@pip//protobuf",
        "@pip//rich",
        "@pip//synchronicity",
        "@pip//toml",
        "@pip//typer",
        "@pip//types_certifi",
        "@pip//types_toml",
        "@pip//typing_extensions",
        "@pip//watchfiles",
    ],
)
